# graph-rag-init

./: .gitignore  README.md  explore.ipynb  main.py  pyproject.toml  settings.yaml
input/: apollo_legacy.txt  apollo_missions.txt  apollo_program_overview.txt  apollo_technology.txt
