[project]
name = "graphrag-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphrag>=3.0.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pyvis>=0.3.2",
    "scipy>=1.17.1",
    "tabulate>=0.9.0",
    "transformers>=5.2.0",
]
